manifests/aws-nitro-enclaves-device-plugin.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aws-nitro-enclaves-k8s-device-plugin
  namespace: kube-system
  labels:
    app: aws-nitro-enclaves-k8s-device-plugin
spec:
  selector:
    matchLabels:
      app: aws-nitro-enclaves-k8s-device-plugin
  template:
    metadata:
      labels:
        app: aws-nitro-enclaves-k8s-device-plugin
    spec:
      priorityClassName: system-node-critical
      hostNetwork: true
      containers:
        - name: nitro-enclave-plugin
          image: public.ecr.aws/aws-ec2/aws-nitro-enclaves-k8s-device-plugin:latest
          imagePullPolicy: Always
          securityContext:
            privileged: true
          volumeMounts:
            - name: var-run
              mountPath: /var/run/
            - name: var-log
              mountPath: /var/log/
            - name: device-plugins
              mountPath: /var/lib/kubelet/device-plugins
      volumes:
        - name: var-run
          hostPath:
            path: /var/run
            type: Directory
        - name: var-log
          hostPath:
            path: /var/log
            type: Directory
        - name: device-plugins
          hostPath:
            path: /var/lib/kubelet/device-plugins
            type: Directory
